Added Keep Recieving page

--- a/locales/en.json
+++ b/locales/en.json
@@ -60,5 +60,7 @@
   "result-ccb-and-gst.p1": "The Government of Canada is also issuing two one-time payments in May to help people cope with COVID-19. ",
   "result-ccb-and-gst.p2": "<strong>Canada Child Benefit</strong><br/>If you care for a child under 18, you will receive a one-time payment of $300 per child in May through the Canada Child Benefit. ",
   "result-ccb-and-gst.p3": "<strong>GST credit</strong><br/>If you receive the GST credit, you will also receive a one-time payment in May:<br/> $400 for single people<br/> $600 for couples.",
-  "result-ccb-and-gst.p4": "Check your bank account to find out if you’ve been receiving either the Canada Child Benefit or the GST credit. Dates of payments are available. File your 2019 taxes sooner than later if you can to ensure you continue to receive them."
+  "result-ccb-and-gst.p4": "Check your bank account to find out if you’ve been receiving either the Canada Child Benefit or the GST credit. Dates of payments are available. File your 2019 taxes sooner than later if you can to ensure you continue to receive them.",
+  "result-keep-receiving-ei.title": "Keep receiving EI",
+  "result-keep-receiving-ei.p1": "Do not stop your Employment Insurance (EI) benefits. You can apply for the new Canadian Economic Response Benefit if your EI runs out before October 3, 2020, and you’re still unemployed. "
 }
