add pages 1-5 from figma file currently no routing logic, just the pages exist removed the h1, but PR #1 brings it back into the radios macro

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -43,11 +43,35 @@
   "personal.intro": "personal.intro",
   "personal.title": "personal.title",
   "phase.desc": "personal.desc",
-  "start.intro": "What you’ll need to set up notifications:<ul><li>Your information 1</li><li>Your information 2</li></ul>",
+  "start.intro": "Answer a few questions to get a customized list of benefits for which you may be eligible and see how much money you could receive. This only suggests federal benefits at this time, and does not collect or track your information. See our Privacy policy and Terms and conditions for more information.",
   "start.intro.banner": "This is a demo",
-  "start.submit": "Let's Go",
-  "start.title": "Node Starter App",
+  "start.submit": "Start now",
+  "start.title": "Money for COVID-19",
   "wordmark.alt": "Symbol of the Government of Canada",
   "Government of Canada": "Government of Canada",
-  "required": "required"
+  "required": "required",
+  "start.subtitle": "Let’s find the benefits you may be eligible for",
+  "form.firstname.desc": "form.firstname.desc",
+  "form.lost_job_c19": "Did you stop working due to COVID-19?",
+  "form.why_stop_working": "Why did you stop working?",
+  "form.why_stop_working.desc": "Choose the description that best fits your situation:",
+  "You’ve been laid off due to COVID-19.": "You’ve been laid off due to COVID-19.",
+  "Your employer has closed.": "Your employer has closed.",
+  "You’re self-employed and had to close.": "You’re self-employed and had to close.",
+  "You’re on unpaid leave from your work.": "You’re on unpaid leave from your work.",
+  "None of the above": "None of the above",
+  "form.your_situation": "Your situation",
+  "form.your_situation.desc": "Choose the description that best fits your situation:",
+  "You were on parental leave recently, but you cannot return to work.": "You were on parental leave recently, but you cannot return to work.",
+  "You were supposed to start a new job, but couldn’t due to COVID-19.": "You were supposed to start a new job, but couldn’t due to COVID-19.",
+  "You’re working fewer hours than you were before COVID-19.": "You’re working fewer hours than you were before COVID-19.",
+  "You’re working from home.": "You’re working from home.",
+  "You’re on paid leave from work.": "You’re on paid leave from work.",
+  "You have not done any paid work in the last 12 months.": "You have not done any paid work in the last 12 months.",
+  "You’re retired.": "You’re retired.",
+  "form.applied_to_EI": "Have you applied for Employment Insurance (EI)?",
+  "You’re already receiving EI benefits.": "You’re already receiving EI benefits.",
+  "You’ve applied for EI benefits, but haven’t heard back.": "You’ve applied for EI benefits, but haven’t heard back.",
+  "No.": "No.",
+  "errors.firstname.length": "errors.firstname.length"
 }
