--- a/locales/en.json
+++ b/locales/en.json
@@ -112,5 +112,6 @@
   "result-left-job-voluntarily.p2": "To apply, go to <a href='https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html'>https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html</a>",
   "header_money_for_covid": "Money for COVID-19",
   "email_results": "Email results",
-  "feedback": "Feedback"
+  "feedback": "Feedback",
+  "start_over": "Start over"
 }
