change up some questions so they pull text by id to make it consistent in the app also makes it easier for validation later

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -15,66 +15,88 @@
   "SMS": "SMS",
   "Skip to main content": "Skip to main content",
   "Yes": "Yes",
-  "app.desc": "app.desc",
-  "app.title": "app.title",
-  "confirmation.intro": "confirmation.intro",
-  "confirmation.title": "confirmation.title",
-  "errors.email.length": "errors.email.length",
-  "errors.expiry.date": "errors.expiry.date",
-  "errors.fullname.length": "errors.fullname.length",
-  "errors.notify_type": "errors.notify_type",
-  "errors.send_notifications.valid": "errors.send_notifications.valid",
-  "footer.link1": "https://numerique.canada.ca",
-  "footer.link1.desc": "footer.link1.desc",
-  "form.address": "form.address",
-  "form.address.desc": "form.address.desc",
-  "form.email": "form.email",
-  "form.email.desc": "form.email.desc",
-  "form.expiry": "form.expiry",
+  "app.desc": "Node Starter App",
+  "app.title": "Node Starter App",
+  "confirmation.intro": "Confirmation Intro goes here",
+  "confirmation.title": "Confirmation Title",
+  "errors.email.length": "Email is required",
+  "errors.expiry.date": "Date is required",
+  "errors.fullname.length": "Full name is required",
+  "errors.multipleChoiceGeneric": "You must select one of the options listed below",
+  "errors.notify_type": "Please indicate how you would like to receive notifications",
+  "errors.send_notifications.valid": "Please indicate if you would like to receive notifications",
+  "footer.link1": "https://digital.canada.ca",
+  "footer.link1.desc": "Canadian Digital Service",
+  "form.address": "Address",
+  "form.address.desc": "Enter your current address",
+  "form.email": "Email address",
+  "form.email.desc": "Enter the email address",
+  "form.expiry": "Expiry date",
   "form.expiry.desc": "eg. 2010-12",
-  "form.fullname": "form.fullname",
-  "form.fullname.desc": "form.fullname.desc",
-  "form.notify_by": "form.notify_by",
-  "form.notify_by.desc": "form.notify_by.desc",
-  "form.send_notifications": "form.send_notifications",
-  "form.send_notifications.desc": "form.send_notifications.desc",
-  "form.upload": "form.upload",
-  "next": "next",
-  "personal.intro": "personal.intro",
-  "personal.title": "personal.title",
-  "phase.desc": "personal.desc",
+  "form.fullname": "Full name",
+  "form.fullname.desc": "Enter your name as it appears on your passport",
+  "form.notify_by": "Notify by",
+  "form.notify_by.desc": "You can select as many as you like.",
+  "form.send_notifications": "Would you like to receive notifications?",
+  "form.send_notifications.desc": "You can choose how you get these later.",
+  "form.upload": "upload file",
+  "next": "Next",
+  "personal.intro": "Intro copy goes here",
+  "personal.title": "Personal Information",
+  "phase.desc": "This site will change as we test ideas.",
   "start.intro": "Answer a few questions to get a customized list of benefits for which you may be eligible and see how much money you could receive. This only suggests federal benefits at this time, and does not collect or track your information. See our Privacy policy and Terms and conditions for more information.",
   "start.intro.banner": "This is a demo",
   "start.submit": "Start now",
   "start.title": "Money for COVID-19",
   "wordmark.alt": "Symbol of the Government of Canada",
+  "caught this error": "caught this error",
+  "Cannot read property 'match' of undefined": "Cannot read property 'match' of undefined",
   "Government of Canada": "Government of Canada",
   "required": "required",
+  "question.eligible_for_ei.desc": "<p>You are eligible for EI Regular or Sickness Benefits if you:</p><ul><li>Paid into EI</li><li>If you work for an employer, check for your T4 or pay stubs for EI deductions</li><li>If you’re self-employed, you would have arranged with Canadian Revenue Agency to contribute to EI, usually for EI sickness or parental leave</li><li>Worked the minimum number of “insurable hours” in the last 52 weeks.</li></ul>",
+  "eligible_for_ei.yes": "Yes, you’re eligible.",
+  "eligible_for_ei.no": "No, you’re not eligible for EI.",
+  "question.eligible_for_ei": "Are you eligible for EI?",
+  "question.leave_voluntarily": "Did you leave your job voluntarily?",
+  "leave_voluntarily.yes": "Yes",
+  "leave_voluntarily.no": "No",
+  "question.sick_or_quarantine": "Are you sick or in quarantine?",
+  "sick_or_quarantine.yes": "Yes",
+  "sick_or_quarantine.no": "No",
+  "result-cerb.title": "Apply for the Canadian Economic Response Benefit  ",
+  "result-cerb.intro": "Based on what you’ve told us, the Canadian Economic Response Benefit should be able to help you. ",
+  "result-cerb.benefit": "$1,800 per month for up to 4 months",
+  "result-cerb.available": "The benefit is available from March 15 to October 3, 2020. You’ll receive payments every 4 weeks for up to 4 months with no income.",
+  "result-cerb.apply": "You’ll be able to apply after April 6, 2020. You’ll get a payment within 10 days of applying.",
+  "result-ei-regular.title": "Apply for Employment Insurance (EI) Regular Benefits ",
+  "result-ei-regular.content": "<p>Based on what you’ve told us, you should apply for Employment Insurance (EI) Regular Benefits. Even if you left your job voluntarily due to unsafe working conditions for your health needs during COVID-19, you may still be eligible for EI.</p><p>To apply, go to <a href=\"https: //www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html\">https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html</a></p><h2 class=\"text-lg\">Estimate of EI payments</h2><p>If your application is approved, you will receive 55% of your gross income up to a maximum of $573 per week before taxes. The payments are sent out every two weeks. The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</p>",
   "start.subtitle": "Let’s find the benefits you may be eligible for",
   "form.firstname.desc": "form.firstname.desc",
   "form.lost_job_c19": "Did you stop working due to COVID-19?",
+  "lost_job_c19.yes": "Yes",
+  "lost_job_c19.no": "No",
   "form.why_stop_working": "Why did you stop working?",
   "form.why_stop_working.desc": "Choose the description that best fits your situation:",
-  "You’ve been laid off due to COVID-19.": "You’ve been laid off due to COVID-19.",
-  "Your employer has closed.": "Your employer has closed.",
-  "You’re self-employed and had to close.": "You’re self-employed and had to close.",
-  "You’re on unpaid leave from your work.": "You’re on unpaid leave from your work.",
-  "None of the above": "None of the above",
+  "why_stop_working.1": "You’ve been laid off due to COVID-19.",
+  "why_stop_working.2": "Your employer has closed.",
+  "why_stop_working.3": "You’re self-employed and had to close.",
+  "why_stop_working.4": "You’re on unpaid leave from your work.",
+  "why_stop_working.6": "None of the above",
   "form.your_situation": "Your situation",
   "form.your_situation.desc": "Choose the description that best fits your situation:",
-  "You were on parental leave recently, but you cannot return to work.": "You were on parental leave recently, but you cannot return to work.",
-  "You were supposed to start a new job, but couldn’t due to COVID-19.": "You were supposed to start a new job, but couldn’t due to COVID-19.",
-  "You’re working fewer hours than you were before COVID-19.": "You’re working fewer hours than you were before COVID-19.",
-  "You’re working from home.": "You’re working from home.",
-  "You’re on paid leave from work.": "You’re on paid leave from work.",
-  "You have not done any paid work in the last 12 months.": "You have not done any paid work in the last 12 months.",
-  "You’re retired.": "You’re retired.",
+  "your_situation.1": "You were on parental leave recently, but you cannot return to work.",
+  "your_situation.2": "You were supposed to start a new job, but couldn’t due to COVID-19.",
+  "your_situation.3": "You’re working fewer hours than you were before COVID-19.",
+  "your_situation.4": "You’re working from home.",
+  "your_situation.5": "You’re on paid leave from work.",
+  "your_situation.6": "You have not done any paid work in the last 12 months.",
+  "your_situation.7": "You’re retired.",
   "form.applied_to_EI": "Have you applied for Employment Insurance (EI)?",
-  "You’re already receiving EI benefits.": "You’re already receiving EI benefits.",
-  "You’ve applied for EI benefits, but haven’t heard back.": "You’ve applied for EI benefits, but haven’t heard back.",
-  "No.": "No.",
+  "applied_to_EI.1": "You’re already receiving EI benefits.",
+  "applied_to_EI.2": "You’ve applied for EI benefits, but haven’t heard back.",
+  "applied_to_EI.3": "No.",
   "errors.firstname.length": "errors.firstname.length",
-  "You quit or were let go due to unsafe working conditions.": "You quit or were let go due to unsafe working conditions.",
+  "why_stop_working.5": "You quit or were let go due to unsafe working conditions.",
   "result-ei-sickness.title": "Based on what you’ve told us, you should apply for Employment Insurance (EI) Sickness Benefits. ",
   "result-ei-sickness.p1": "To apply, go to <a href='https://www.canada.ca/en/services/benefits/ei/ei-sickness/apply.html'>https://www.canada.ca/en/services/benefits/ei/ei-sickness/apply.html</a>",
   "result-ei-sickness.p2": "  Due to the COVID-19 crisis, we’ve waived the one-week waiting period so you can get paid faster. We also waived and the requirement for medical certification to make it easier to apply.",
