--- a/locales/en.json
+++ b/locales/en.json
@@ -22,6 +22,7 @@
   "errors.email.length": "Email is required",
   "errors.expiry.date": "Date is required",
   "errors.fullname.length": "Full name is required",
+  "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "errors.notify_type": "Please indicate how you would like to receive notifications",
   "errors.send_notifications.valid": "Please indicate if you would like to receive notifications",
   "footer.link1": "https://digital.canada.ca",
@@ -53,7 +54,7 @@
   "Government of Canada": "Government of Canada",
   "required": "required",
   "question.eligible_for_ei.desc": "<p>You are eligible for EI Regular or Sickness Benefits if you:</p><ul><li>Paid into EI</li><li>If you work for an employer, check for your T4 or pay stubs for EI deductions</li><li>If you’re self-employed, you would have arranged with Canadian Revenue Agency to contribute to EI, usually for EI sickness or parental leave</li><li>Worked the minimum number of “insurable hours” in the last 52 weeks.</li></ul>",
-  "eligible_for_ei.yes": "Yes, you’re eligible",
+  "eligible_for_ei.yes": "Yes, you’re eligible.",
   "eligible_for_ei.no": "No, you’re not eligible for EI.",
   "question.eligible_for_ei": "Are you eligible for EI?",
   "question.leave_voluntarily": "Did you leave your job voluntarily?",
@@ -72,28 +73,30 @@
   "start.subtitle": "Let’s find the benefits you may be eligible for",
   "form.firstname.desc": "form.firstname.desc",
   "form.lost_job_c19": "Did you stop working due to COVID-19?",
+  "lost_job_c19.yes": "Yes",
+  "lost_job_c19.no": "No",
   "form.why_stop_working": "Why did you stop working?",
   "form.why_stop_working.desc": "Choose the description that best fits your situation:",
-  "You’ve been laid off due to COVID-19.": "You’ve been laid off due to COVID-19.",
-  "Your employer has closed.": "Your employer has closed.",
-  "You’re self-employed and had to close.": "You’re self-employed and had to close.",
-  "You’re on unpaid leave from your work.": "You’re on unpaid leave from your work.",
-  "None of the above": "None of the above",
+  "why_stop_working.1": "You’ve been laid off due to COVID-19.",
+  "why_stop_working.2": "Your employer has closed.",
+  "why_stop_working.3": "You’re self-employed and had to close.",
+  "why_stop_working.4": "You’re on unpaid leave from your work.",
+  "why_stop_working.6": "None of the above",
   "form.your_situation": "Your situation",
   "form.your_situation.desc": "Choose the description that best fits your situation:",
-  "You were on parental leave recently, but you cannot return to work.": "You were on parental leave recently, but you cannot return to work.",
-  "You were supposed to start a new job, but couldn’t due to COVID-19.": "You were supposed to start a new job, but couldn’t due to COVID-19.",
-  "You’re working fewer hours than you were before COVID-19.": "You’re working fewer hours than you were before COVID-19.",
-  "You’re working from home.": "You’re working from home.",
-  "You’re on paid leave from work.": "You’re on paid leave from work.",
-  "You have not done any paid work in the last 12 months.": "You have not done any paid work in the last 12 months.",
-  "You’re retired.": "You’re retired.",
+  "your_situation.1": "You were on parental leave recently, but you cannot return to work.",
+  "your_situation.2": "You were supposed to start a new job, but couldn’t due to COVID-19.",
+  "your_situation.3": "You’re working fewer hours than you were before COVID-19.",
+  "your_situation.4": "You’re working from home.",
+  "your_situation.5": "You’re on paid leave from work.",
+  "your_situation.6": "You have not done any paid work in the last 12 months.",
+  "your_situation.7": "You’re retired.",
   "form.applied_to_EI": "Have you applied for Employment Insurance (EI)?",
-  "You’re already receiving EI benefits.": "You’re already receiving EI benefits.",
-  "You’ve applied for EI benefits, but haven’t heard back.": "You’ve applied for EI benefits, but haven’t heard back.",
-  "No.": "No.",
+  "applied_to_EI.1": "You’re already receiving EI benefits.",
+  "applied_to_EI.2": "You’ve applied for EI benefits, but haven’t heard back.",
+  "applied_to_EI.3": "No.",
   "errors.firstname.length": "errors.firstname.length",
-  "You quit or were let go due to unsafe working conditions.": "You quit or were let go due to unsafe working conditions.",
+  "why_stop_working.5": "You quit or were let go due to unsafe working conditions.",
   "result-ei-sickness.title": "Based on what you’ve told us, you should apply for Employment Insurance (EI) Sickness Benefits. ",
   "result-ei-sickness.p1": "To apply, go to <a href='https://www.canada.ca/en/services/benefits/ei/ei-sickness/apply.html'>https://www.canada.ca/en/services/benefits/ei/ei-sickness/apply.html</a>",
   "result-ei-sickness.p2": "  Due to the COVID-19 crisis, we’ve waived the one-week waiting period so you can get paid faster. We also waived and the requirement for medical certification to make it easier to apply.",
