Add a couple links to the footer
Pretty sure we're going to have a privacy policy and a terms and
conditions because of the text on the first page.

Linked them to the CDS website for now.

--- a/locales/en.json
+++ b/locales/en.json
@@ -25,8 +25,10 @@
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "errors.notify_type": "Please indicate how you would like to receive notifications",
   "errors.send_notifications.valid": "Please indicate if you would like to receive notifications",
-  "footer.link1": "https://digital.canada.ca",
-  "footer.link1.desc": "Canadian Digital Service",
+  "footer.link1": "https://digital.canada.ca/legal/privacy/",
+  "footer.link1.desc": "Privacy policy",
+  "footer.link2": "https://digital.canada.ca/legal/terms/",
+  "footer.link2.desc": "Terms and conditions",
   "form.address": "Address",
   "form.address.desc": "Enter your current address",
   "form.email": "Email address",
