Add button styling for start button and the Next button, this includes changing the default text for form buttons
I also set tailwind config to have important set to true so that tailwind classes override our css (this seems to be what we're trying to do, but we have some specificity in our css that gets in the way of tailwind)

Removed the cancel button, as it now lives in the header as "start over"

--- a/locales/en.json
+++ b/locales/en.json
@@ -116,5 +116,6 @@
   "header_money_for_covid": "Money for COVID-19",
   "email_results": "Email results",
   "feedback": "Feedback",
-  "start_over": "Start over"
+  "start_over": "Start over",
+  "Next": "Next"
 }
