--- a/locales/en.json
+++ b/locales/en.json
@@ -119,5 +119,20 @@
   "header_money_for_covid": "Money for COVID-19",
   "email_results": "Email results",
   "feedback": "Feedback",
-  "start_over": "Start over"
+  "start_over": "Start over",
+  "mortgage_payments.1": "Yes, you’re worried about your mortgage",
+  "mortgage_payments.2": "Yes, you’re worried about your rent",
+  "mortgage_payments.3": "No, you’re not worried at this time",
+  "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
+  "ccb.1": "Yes",
+  "ccb.2": "No",
+  "ccb.hint": "Check your bank account to find out if you’ve been receiving the Canada Child Benefit. <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.htmlk'>Dates of payments</a> are available. ",
+  "form.ccb": "Do you receive the Canada Child Benefit?",
+  "gst.1": "Yes",
+  "gst.2": "No",
+  "form.gst": "Do you receive the GST credit?",
+  "gst.hint": "Check your bank account to find out if you’ve been receiving the GST credit. <a href='#'>Dates of payments are available</a>. ",
+  "student_debt.1": "Yes",
+  "student_debt.2": "No",
+  "form.student_debt": "Do you have student debt?"
 }
