Update the text on the first page to match the mocks

--- a/locales/en.json
+++ b/locales/en.json
@@ -16,14 +16,15 @@
   "footer.link2": "https://digital.canada.ca/legal/terms/",
   "footer.link2.desc": "Terms and conditions",
   "phase.desc": "This site will change as we test ideas.",
-  "start.intro": "This tool only suggests federal programs at this time. It does not collect or track your information. See our Privacy policy and Terms and conditions for more information.",
+  "start.intro.1": "Answer some questions to find out about financial help.",
+  "start.intro.2": "This tool does not collect or track your information. See our <a href='https://digital.canada.ca/legal/privacy/'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/'>Terms and conditions</a> for more information. It only suggests federal programs at this time.",
   "start.intro.banner": "This is a demo",
   "start.submit": "Start now",
   "start.title": "Money for COVID-19",
   "wordmark.alt": "Symbol of the Government of Canada",
   "Government of Canada": "Government of Canada",
   "required": "required",
-  "start.subtitle": "Find out what financial help is available for you by answering a few questions",
+  "start.subtitle": "Find out what financial help is available",
   "feedback": "Feedback",
   "start_over": "Start over",
   "mortgage_payments.1": "Yes, you’re worried about your mortgage",
