Update content on start page and add banner
Thanks to @katedee, the banner was already there.

I added some slight modifications, like changing the "i" to monospace
and shaving off a few pixels on mobile, but otherwise it was all
there and looked pretty good.

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -18,7 +18,8 @@
   "phase.desc": "This site will change as we test ideas.",
   "start.intro.1": "Answer some questions to find out about financial help.",
   "start.intro.2": "This tool does not collect or track your information. See our Privacy policy and Terms and conditions for more information. It only suggests federal programs at this time.",
-  "start.intro.banner": "This is a demo",
+  "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
+  "start.intro.banner.2": "Details are available online.",
   "start.submit": "Start now",
   "start.title": "Money for COVID-19",
   "wordmark.alt": "Symbol of the Government of Canada",
