Adding in the benefit text and styling

--- a/locales/en.json
+++ b/locales/en.json
@@ -80,5 +80,43 @@
   "cerb.linktext": "Learn more about the Canada Emergency Response Benefit",
   "cerb.box1": "$500 per week, paid every 4 weeks",
   "cerb.box2": "Up to 4 months",
-  "cerb.box3": "Within 10 days of applying"
+  "cerb.box3": "Within 10 days of applying",
+  "ei_sickness.header": "Apply for Employment Insurance (EI) Sickness Benefits",
+  "ei_sickness.preamble": "<p>Good to know:</p><ul class='list-disc list-inside'><li>Due to the COVID-19 crisis, we’ve waived the one-week waiting period so you can get paid faster. </li><li> We also waived the requirement for medical certification to make it easier to apply. </li></ul>",
+  "ei_sickness.linktext": "Learn more about Employment Insurance (EI) Sickness Benefits",
+  "ei_sickness.box1": "$500 per week, paid every 2 weeks",
+  "gst_credit.header": "More money through the GST credit",
+  "gst_credit.preamble": "<p>Good to know:</p><ul class='list-disc list-inside'><li>Check your bank account to find out if you’ve been receiving the GST credit.</li><li> Dates of payments are available online.</li></ul>",
+  "gst_credit.linktext": "Learn more about GST credit",
+  "gst_credit.box1": "One-time automatic payment in May",
+  "gst_credit.box2": "$400 for single people, $600 for couples",
+  "ccb_payment.header": "Extra payment from Canada Child Benefit",
+  "ccb_payment.preamble": "<p>The benefit can help if you:</p><ul class='list-disc list-inside'><li>Care for a child under 18 years old</li></ul><p>Good to know:</p><ul class='list-disc list-inside'><li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li><li> Dates of payments are available online.</li></ul>",
+  "ccb_payment.linktext": "Learn more about the Canada Child Benefit",
+  "ccb_payment.box1": "One-time automatic payment in May",
+  "ccb_payment.box2": "$300 per child",
+  "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
+  "ei_regular.preamble": "<p>Good to know:</p><ul class='list-disc list-inside'><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li></ul>",
+  "ei_regular.linktext": "Learn more about Employment Insurance (EI) Regular Benefits",
+  "ei_regular.box1": "$500 per week, paid every 2 weeks",
+  "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
+  "ei_workshare.preamble": "<p></p><ul class='list-disc list-inside'><li>Your hours have been reduced by 10 to 60% because of COVID-19</li></ul><p>To do this:</p><ul class='list-disc list-inside'><li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li><li> All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li></ul",
+  "ei_workshare.linktext": "Learn more about Employment Insurance (EI) Work-Sharing",
+  "ei_workshare.box1": "Receive EI benefits",
+  "ei_workshare.box2": "Up to 76 weeks",
+  "mortgage_deferral.header": "Contact your bank to delay mortgage payments",
+  "mortgage_deferral.preamble": "<p>Good to know:</p><ul class='list-disc list-inside'><li>The bank will still charge interest</li><li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li><li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage. </li></ul>",
+  "mortgage_deferral.linktext": "Learn more about help with your mortgage",
+  "mortgage_deferral.box1": "Skip mortgage payments until you’re able to pay again",
+  "rrif.header": "Lower mandatory withdrawals for your Registered Retirement Income Fund (RRIF)",
+  "rrif.preamble": "<ul class='list-disc list-inside'><li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money. </li></ul>",
+  "rrif.linktext": "Contact your bank for more details",
+  "student_loan.header": "No student loan payments for 6 months",
+  "student_loan.preamble": "<p>Good to know:</p><ul class='list-disc list-inside'><li>You don’t need to apply to pause your payments.</li><li> Pre-authorized payments are stopped.</li><li> Log in to your <a href='#'>National Student Loans Service account</a> to see how much  </li></ul>",
+  "student_loan.linktext": "Learn more about help with student loan payments",
+  "student_loan.box1": "Payments automatically paused",
+  "student_loan.box2": "From March 30, 2020 until September 30, 2020",
+  "rent_help.header": "You cannot be evicted for not paying rent",
+  "rent_help.preamble": "<ul class='list-disc list-inside'><li>Provincial governments are in charge of rental housing rules. </li><li> At the moment, you cannot be evicted for not paying rent. </li></ul>",
+  "rent_help.linktext": "Check with your provincial government for more details"
 }
