Use non-breaking hyphen for COVID-19
We don't want the "-19" part to fall onto its own line, as it
doesn't mean anything by itself.

--- a/locales/en.json
+++ b/locales/en.json
@@ -8,7 +8,7 @@
   "Page not found": "Page not found",
   "Please correct the errors on the page": "Please correct the errors on the page",
   "Skip to main content": "Skip to main content",
-  "app.title": "Money for COVID-19",
+  "app.title": "Money for COVID‑19",
   "app.phase": "ALPHA",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "footer.link1": "https://digital.canada.ca/legal/privacy/",
@@ -21,7 +21,7 @@
   "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
   "start.intro.banner.2": "Details are available online.",
   "start.submit": "Start now",
-  "start.title": "Money for COVID-19",
+  "start.title": "Money for COVID‑19",
   "wordmark.alt": "Symbol of the Government of Canada",
   "Government of Canada": "Government of Canada",
   "required": "required",
@@ -31,15 +31,15 @@
   "lost_job.1": "Yes, all your income",
   "lost_job.2": "Some of your income",
   "lost_job.3": "No, your income is the same",
-  "form.lost_job": "Have you lost income due to COVID-19?",
+  "form.lost_job": "Have you lost income due to COVID‑19?",
   "form.your_situation.no_income": "Choose the description that best fits your situation",
   "your_situation.no_income.1": "You lost your job or your employer closed",
   "your_situation.no_income.2": "You’re self-employed and had to close",
   "your_situation.no_income.3": "You’re on unpaid leave to care for a child or sick person",
   "your_situation.no_income.4": "You’re sick or quarantined on unpaid leave",
   "your_situation.no_income.5": "You were on parental leave recently, but you cannot return to work",
-  "your_situation.no_income.6": "You were supposed to start a new job but couldn’t due to COVID-19",
-  "your_situation.some_income.1": "Your hours have been reduced due to COVID-19",
+  "your_situation.no_income.6": "You were supposed to start a new job but couldn’t due to COVID‑19",
+  "your_situation.some_income.1": "Your hours have been reduced due to COVID‑19",
   "your_situation.some_income.2": "You’re retired",
   "your_situation.some_income.3": "You’ve lost one of your jobs but you still have a side gig",
   "form.your_situation.some_income": "Choose the description that best fits your situation",
