--- a/locales/fr.json
+++ b/locales/fr.json
@@ -8,7 +8,7 @@
   "Page not found": "Page not found",
   "Please correct the errors on the page": "Please correct the errors on the page",
   "Skip to main content": "Skip to main content",
-  "app.title": "Money for COVID-19",
+  "app.title": "Money for COVID‑19",
   "app.phase": "ALPHA",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "footer.link1": "https://numerique.canada.ca/transparence/confidentialite/",
@@ -21,7 +21,7 @@
   "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
   "start.intro.banner.2": "Details are available online.",
   "start.submit": "Start now",
-  "start.title": "Money for COVID-19",
+  "start.title": "Money for COVID‑19",
   "wordmark.alt": "Symbol of the Government of Canada",
   "Government of Canada": "Government of Canada",
   "required": "required",
