--- a/locales/en.json
+++ b/locales/en.json
@@ -38,7 +38,7 @@
   "your_situation.no_income.3": "You’re on unpaid leave to care for a child or sick person",
   "your_situation.no_income.4": "You’re sick or quarantined on unpaid leave",
   "your_situation.no_income.5": "You were on parental leave recently, but you cannot return to work",
-  "your_situation.no_income.6": "You were supposed to start a new job but couldn’t due to COVID‑19",
+  "your_situation.no_income.6": "You were on Employment Insurance benefits in the last 12 months and your claim has ended",
   "your_situation.some_income.1": "Your hours have been reduced due to COVID‑19",
   "your_situation.some_income.2": "You’re retired",
   "your_situation.some_income.3": "You’ve lost one of your jobs but you still have a side gig",
