Adding Parenthesis around required.
removing some white space in h1 to shorten things up.

--- a/locales/en.json
+++ b/locales/en.json
@@ -24,7 +24,7 @@
   "start.title": "Money for COVID‑19",
   "wordmark.alt": "Symbol of the Government of Canada",
   "Government of Canada": "Government of Canada",
-  "required": "required",
+  "required": "(required)",
   "start.subtitle": "Find out what financial help is available",
   "feedback": "Feedback",
   "start_over": "Start over",
